Coworking page elements height fixed on landscape mode on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ footer {
 }
 
 .coworking__body__navbar-main-bg {
-  background-image: url(../img/coworking/coworking-background.jpg);
+  background-image: url(../img/coworking/coworking-background.jpg), url(../img/coworking/coworking-background-low.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -299,7 +299,7 @@ footer {
 }
 
 .coworking__body__section, .coworking__body__section--last {
-  height: 100vh;
+  min-height: 100vh;
 }
 .coworking__body__section *, .coworking__body__section--last * {
   color: #ede0d4;
